# bvaccess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
contrib/: CMakeLists.txt
poc_scripts/: bvdecode.py  bvdecode_new.py
src/: BVFile.cpp  BVFile.hpp  CMakeLists.txt  openlefile.cpp  platform.hpp
src/platform/: platform_linux.cpp  platform_win.cpp
