
## SOCI related
set(SOCI_CXX_C11 ON CACHE BOOL "")
set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
set(SOCI_TESTS OFF CACHE BOOL "")
set(SOCI_SHARED OFF CACHE BOOL "" FORCE)
set(SOCI_STATIC ON CACHE BOOL "" FORCE)
set(WITH_BOOST OFF CACHE BOOL "")
set(WITH_DB2 OFF CACHE BOOL "")
set(WITH_FIREBIRD OFF CACHE BOOL "")
set(WITH_ORACLE OFF CACHE BOOL "")

set(CMAKE_BUILD_TYPE RELEASE)

add_subdirectory(soci)
set(SOCI_INCLUDE_DIRS
    "${CMAKE_SOURCE_DIR}/contrib/soci/include"
    "${CMAKE_BINARY_DIR}/contrib/soci/include" PARENT_SCOPE)
