
## SOCI related
#set(SOCI_CXX_C11 ON CACHE BOOL "")

set(SOCI_TESTS OFF CACHE BOOL "")
set(SOCI_SHARED OFF CACHE BOOL "" FORCE)
set(SOCI_STATIC ON CACHE BOOL "" FORCE)

set(WITH_BOOST OFF CACHE BOOL "")
set(WITH_DB2 OFF CACHE BOOL "")
set(WITH_FIREBIRD OFF CACHE BOOL "")
set(WITH_ORACLE OFF CACHE BOOL "")
set(WITH_MYSQL OFF CACHE BOOL "")
set(WITH_POSTGRESQL OFF CACHE BOOL "")
set(WITH_SQLITE3 OFF CACHE BOOL "")

add_subdirectory(soci)
set(SOCI_INCLUDE_DIRS
    "${CMAKE_SOURCE_DIR}/contrib/soci/include"
    "${CMAKE_BINARY_DIR}/contrib/soci/include" PARENT_SCOPE)
